@@ -7,4 +7,4 @@ Many to One
 Many to Many
 
 
-
+add arg vm   --module-path "D:\projectFiles\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml
